# VakolEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  Vakol_Engine.cpp  Vakol_Engine.h  physics.ipynb
Core/: CMakeLists.txt
Core/assets/: basic.frag
Core/assets/models/: block.mtl  cornellBox.mtl  cube.mtl  kiki.mtl  kikiModel_GRP.mtl  kiki_resized.mtl
Core/assets/shaders/: DefaultMultitexturePhongShader.frag  DefaultMultitextureUnlitShader.klproj  DefaultPhongShader.frag  DefaultSkyboxShader.frag  DefaultSkyboxShader.vert  DefaultUnlitShader.klproj  advanced_lighting.frag  advanced_lighting.vert  animation.frag  animation.vert  basic.frag  basic.vert  basic_terrain.frag  basic_terrain.vert  clod_terrain.frag  clod_terrain.tesc  clod_terrain.tese  clod_terrain.vert  custom.frag  custom.vert  custom_bp.frag  custom_bp.vert  custom_nm.frag  custom_nm.vert  debug.frag  debug.vert  default.frag  default.vert  gouraud.frag  instance.frag  instance.vert  kiki.frag  phyDebug.frag  phyDebug.vert  primitive.vert  rainbow.frag  rainbow.vert  skybox.frag  skybox.vert  start_terrain.frag  (+5 more)
Core/assets/textures/: 2x2-mountains.raw
Core/include/Vakol/: core.hpp
Core/lib/: CMakeLists.txt
Core/lib/duktape/: CMakeLists.txt
Core/lib/lua/: CMakeLists.txt
Core/src/: CMakeLists.txt  core.cpp  core.hpp
Core/src/Animation/: Animator.cpp  CMakeLists.txt
Core/src/Application/: Application.cpp  CMakeLists.txt  GameConfig.hpp
Core/src/AssetLoader/: AssetLoader.cpp  AssetManager.cpp  CMakeLists.txt  FileLoader.cpp  MaterialLibrary.cpp  ModelLibrary.cpp  ModelLoader.cpp  ModelProcessing.cpp  ShaderLibrary.cpp  ShaderLoader.cpp  ShaderProcessing.cpp  TextureLibrary.cpp  TextureLoader.cpp  TextureProcessing.cpp
Core/src/Camera/: CMakeLists.txt  Camera.cpp
Core/src/Controller/: Animator.cpp  Animator.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  EntityList.cpp  EntityList.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  LuaAccess.cpp  LuaAccess.hpp  LuaState.cpp  LuaState.hpp  Math.cpp  Math.hpp  MeshFilter.cpp  MeshFilter.hpp  MeshRenderer.cpp  MeshRenderer.hpp  ModelLoader.cpp  ModelLoader.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Singleton.hpp  SolSerialize.cpp  SolSerialize.hpp  System.cpp  System.hpp  Terrain.cpp  Terrain.hpp  Terrain_2.0.cpp  Terrain_2.0.hpp  Time.hpp
Core/src/ECS/: CMakeLists.txt  Components.cpp  Entity.cpp  EntityList.cpp  System.cpp
Core/src/GUI/: CMakeLists.txt  GUIWindow.cpp
Core/src/Input/: CMakeLists.txt  Input.cpp
Core/src/LayerManager/: CMakeLists.txt  LayerManager.cpp
Core/src/Logger/: CMakeLists.txt  Logger.cpp
Core/src/Math/: CMakeLists.txt  Math.cpp  Math.hpp
Core/src/Model/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  GLBuffer.cpp  GLBuffer.hpp  GLMaterial.cpp  GLMaterial.hpp  GLMesh.cpp  GLMesh.hpp  GLModel.cpp  GLModel.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp  GameConfig.hpp  Instance.cpp  Instance.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp
Core/src/Physics/: CMakeLists.txt  CollisionListener.cpp  PhysicsEngine.cpp  PhysicsMath.cpp  PhysicsPool.cpp  PhysicsScene.cpp  ScenePhysics.cpp
Core/src/PhysicsEngine/: CMakeLists.txt  Colliders.cpp  Colliders.hpp  DrawPrimitives.cpp  DrawPrimitives.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Rigidbody.cpp  Rigidbody.hpp
Core/src/Primitives/: CMakeLists.txt  Cube.cpp  Primitives.cpp  Sphere.cpp
Core/src/Rendering/: Buffer.cpp  CMakeLists.txt  DebugRenderer.cpp  GLRenderer.cpp  Instance.cpp  MaterialLibrary.cpp  MaterialLibrary.hpp  ModelLibrary.cpp  RenderAPI.cpp  RenderAPI.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderData.hpp  RenderEngine.cpp  RenderEngine.hpp  RenderQueue.cpp  RenderQueue.hpp  RendererFactory.cpp  Shader.cpp  ShaderLibrary.cpp  ShaderLibrary.hpp  Skybox.cpp  VertexArray.cpp
Core/src/SceneManager/: CMakeLists.txt  Scene.cpp  SceneManager.cpp  SceneManager.hpp
Core/src/ScriptEngine/: CMakeLists.txt  DukUtils.hpp  LuaAccess.cpp  NativeFunctions.hpp  ScriptEngine.cpp  ScriptEngine.hpp
Core/src/Scripting/: CMakeLists.txt  LuaAccess.cpp  LuaAccess.hpp  RegisterAssets.cpp  RegisterCamera.cpp  RegisterComponents.cpp  RegisterECS.cpp  RegisterGUI.cpp  RegisterInput.cpp  RegisterLogger.cpp  RegisterMath.cpp  RegisterPhysics.cpp  RegisterPrimitives.cpp  RegisterScene.cpp  RegisterTime.cpp  ScriptEngine.cpp  ScriptEngine.hpp  ScriptTypes.hpp
Core/src/Serialisation/: CMakeLists.txt  SolSerialize.cpp
Core/src/Terrain/: CMakeLists.txt  Terrain.cpp
Core/src/Time/: CMakeLists.txt  Time.cpp
Core/src/Utils/: CMakeLists.txt  GUID.cpp
Core/src/View/: CMakeLists.txt
Core/src/Window/: CMakeLists.txt  Window.cpp
Core/tests/: CMakeLists.txt  tests.cpp
Core/tests/Animation/: CMakeLists.txt
Core/tests/Application/: ApplicationTests.cpp  CMakeLists.txt
Core/tests/AssetLoader/: AssetLoaderTests.cpp  CMakeLists.txt  FileLoaderTests.cpp  ModelLibraryTests.cpp  ModelLoaderTests.cpp  ShaderLibraryTests.cpp  ShaderLoaderTests.cpp  TextureLibraryTests.cpp  TextureLoaderTests.cpp
Core/tests/Camera/: CMakeLists.txt  CameraTests.cpp
Core/tests/ECS/: CMakeLists.txt  EntityListTests.cpp  EntityTests.cpp
Core/tests/GUI/: CMakeLists.txt  GUIWindowTests.cpp
Core/tests/Input/: CMakeLists.txt
Core/tests/LayerManager/: CMakeLists.txt  LayerManagerTests.cpp
Demo/: CMakeLists.txt  Demo.cpp
Demo/Layers/: CMakeLists.txt  EmotionLayer.cpp  EmotionLayer.hpp  MyGUILayer.cpp  MyGUILayer.hpp
Demo/assets/: basic.frag  basic.vert  test.lua
Demo/lib/: CMakeLists.txt
Demo/scripts/: PhysicsScene.lua  advanced_example.lua  basic_example.lua  cameraController.lua  fpsGUI.lua  game_config.lua  main.lua  physics_example.lua  physics_plane.lua  player.lua  start_menu.lua  test.js  test.lua  test1.js  testScene.lua  water_example.lua
(+544 files in other folders)
